# device-gateway-rest

./: .env.example  .gitignore  Dockerfile  README.md  Taskfile.yml  compose.yaml  main.py  pyproject.toml  test_client.py
